libtorrentsharp/LibtorrentSharp.Native/include/library.h

    // session control
    LTS_EXPORT lt::session* create_session(lt::settings_pack* pack);
    LTS_EXPORT void destroy_session(lt::session* session);
    LTS_EXPORT void set_event_callback(lt::session* session, cs_alert_callback callback, bool include_unmapped_events);
    LTS_EXPORT void clear_event_callback(lt::session* session);
    LTS_EXPORT void apply_settings(lt::session* session, lt::settings_pack* settings);
    // torrent control
    LTS_EXPORT lt::torrent_info* create_torrent_file(const char* file_path);
    LTS_EXPORT lt::torrent_info* create_torrent_bytes(const char* data, long length);
    LTS_EXPORT void destroy_torrent(lt::torrent_info* torrent);
    LTS_EXPORT lt::torrent_handle* attach_torrent(lt::session* session, lt::torrent_info* torrent, const char* save_path);
    // Detach a torrent from the session. `remove_flags` mirrors libtorrent's
    // `remove_flags_t`:
    //   0 = no delete (default)
    //   1 = delete_files
    //   2 = delete_partfile
    //   3 = both
    // After returning, the torrent handle is no longer valid and must not be
    // passed to any other lts_ call. delete_files triggers file_deleted_alert
    // or file_delete_failed_alert, then torrent_removed_alert.
    LTS_EXPORT void detach_torrent(lt::session* session, lt::torrent_handle* torrent, int32_t remove_flags);
    // Parses a magnet URI and attaches the resulting torrent to the session. Metadata
    // arrives asynchronously via alerts; the handle is usable for status/control as soon
    // as this call returns. Returns nullptr on parse failure or invalid handle.
    LTS_EXPORT lt::torrent_handle* lts_add_magnet(lt::session* session, const char* magnet_uri, const char* save_path);
    // Requests resume data for the torrent. Completes asynchronously — the resume blob
    // arrives via cs_resume_data_alert on the event callback.
    LTS_EXPORT void lts_request_resume_data(lt::torrent_handle* torrent);
    // Discards existing piece-state for the torrent and re-hashes the on-disk files
    // from scratch. Returns without effect if `torrent` is null or invalid.
    LTS_EXPORT void lts_force_recheck(lt::torrent_handle* torrent);
    // Queue-aware pause: sets paused + enables auto_managed so libtorrent can
    // resume the torrent when queue slots free up. Distinct from stop_torrent,
    // which is a manual force-pause that bypasses the queue.
    LTS_EXPORT void lts_pause_torrent(lt::torrent_handle* torrent);
    // Queue-aware resume: clears paused + enables auto_managed so libtorrent's
    // queue governs running/pausing. Distinct from start_torrent, which forces
    // an immediate unpause ignoring queue limits.
    LTS_EXPORT void lts_resume_torrent(lt::torrent_handle* torrent);
    // Force-start: bypasses the download queue limit. When force_start=true,
    // clears auto_managed (so the queue cannot re-pause it) and resumes the
    // torrent. When force_start=false, re-enables auto_managed so the queue
    // resumes normal governance.
    LTS_EXPORT void lts_force_start_torrent(lt::torrent_handle* torrent, bool force_start);
    // Relocates the torrent's data to `new_path`. Completes asynchronously;
    // success/failure surface via storage_moved_alert / storage_moved_failed_alert
    // (alert plumbing pending). `flags` maps to libtorrent's move_flags_t:
    //   0 = always_replace_files (default)
    //   1 = fail_if_exist
    //   2 = dont_replace
    //   3 = reset_save_path (deprecated; updates save path without moving data)
    LTS_EXPORT void lts_move_storage(lt::torrent_handle* torrent, const char* new_path, int32_t flags);
    // Snapshot of the torrent's connected peers. Populates `out_list` with an
    // array the caller owns; release it via lts_destroy_peers.
    LTS_EXPORT void lts_get_peers(lt::torrent_handle* torrent, peer_list* out_list);
    LTS_EXPORT void lts_destroy_peers(peer_list* list);
    // Snapshot of the torrent's trackers. Per-tracker aggregate across endpoints
    // and v1/v2 info hashes. Release via lts_destroy_trackers.
    LTS_EXPORT void lts_get_trackers(lt::torrent_handle* torrent, tracker_list* out_list);
    LTS_EXPORT void lts_destroy_trackers(tracker_list* list);
    // Tracker mutation: add, remove, or edit a tracker URL on a running torrent.
    // Changes take effect immediately on the in-memory announce list; they are
    // not persisted to the .torrent file.
    LTS_EXPORT void lts_add_tracker(lt::torrent_handle* torrent, const char* url, int32_t tier);
    LTS_EXPORT void lts_remove_tracker(lt::torrent_handle* torrent, const char* url);
    LTS_EXPORT void lts_edit_tracker(lt::torrent_handle* torrent, const char* old_url, const char* new_url, int32_t new_tier);
    // Sends a scrape request to the torrent's trackers. Completes asynchronously;
    // success fires cs_scrape_reply_alert, failure fires cs_scrape_failed_alert.
    // No-op when `torrent` is null or invalid.
    LTS_EXPORT void lts_scrape_tracker(lt::torrent_handle* torrent);