libtorrentsharp/LibtorrentSharp/Native/NativeMethods.cs

// Derived from csdl by Albie Spriddell. See libtorrentsharp/NOTICE for attribution.
// csdl - a cross-platform libtorrent wrapper for .NET
// Licensed under Apache-2.0 - see the license file for more information

#nullable enable
using System;
using System.Runtime.InteropServices;
using LibtorrentSharp.Enums;

namespace LibtorrentSharp.Native;

internal static partial class NativeMethods
{
    private const string LibraryName = "lts";

    /// <summary>
    /// Delegate representing the callback for session events.
    /// </summary>
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void SessionEventCallback(IntPtr alertPtr);

    /// <summary>
    /// Per-piece progress callback fired by <see cref="CreateTorrent"/>. The native
    /// side fires once with <paramref name="currentPiece"/>=0 before hashing starts
    /// and once per piece during hashing; <paramref name="pieceSize"/> and
    /// <paramref name="totalSize"/> are constant for the run.
    /// </summary>
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void CreateTorrentProgressCallback(
        long currentPiece,
        long totalPieces,
        long pieceSize,
        long totalSize,
        IntPtr ctx);

    /// <summary>
    /// Creates a session, optionally using a provided settings pack.
    /// </summary>
    /// <param name="settingsPack">A settings pack handle, set to <c>null</c> to initialise without customisation</param>
    /// <returns>A handle to the session</returns>
    [LibraryImport(LibraryName, EntryPoint = "create_session")]
    public static unsafe partial IntPtr CreateSession(void* settingsPack);

    /// <summary>
    /// Releases the unmanaged resources associated with a session.
    /// </summary>
    /// <param name="sessionHandle">The session to invalidate</param>
    [LibraryImport(LibraryName, EntryPoint = "destroy_session")]
    public static partial void FreeSession(IntPtr sessionHandle);

    /// <summary>
    /// Sets the event callback for a session.
    /// </summary>
    /// <param name="sessionHandle">The handle for the session to add the callback to</param>
    /// <param name="callback">The callback to run when an event is posted</param>
    /// <param name="includeUnmappedEvents">Whether to run the <see cref="callback"/> for events that aren't mapped, that only produce <see cref="NativeEvents.AlertBase"/> values with no additional data</param>
    [LibraryImport(LibraryName, EntryPoint = "set_event_callback")]
    public static partial void SetEventCallback(IntPtr sessionHandle, [MarshalAs(UnmanagedType.FunctionPtr)] SessionEventCallback callback, [MarshalAs(UnmanagedType.Bool)] bool includeUnmappedEvents);

    /// <summary>
    /// Clears the currently set event callback.
    /// </summary>
    /// <param name="sessionHandle">The session handle to remove the registered callback from</param>
    [LibraryImport(LibraryName, EntryPoint = "clear_event_callback")]
    public static partial void ClearEventCallback(IntPtr sessionHandle);

    /// <summary>
    /// Applies a settings pack to a session.
    /// </summary>
    /// <param name="sessionHandle">The session handle to apply the pack to</param>
    /// <param name="settingsPack">The pack handle to apply</param>
    [LibraryImport(LibraryName, EntryPoint = "apply_settings")]
    public static partial void ApplySettingsPack(IntPtr sessionHandle, IntPtr settingsPack);

    /// <summary>
    /// Create a torrent from a file on the local disk
    /// </summary>
    /// <param name="path">The path to the file to parse</param>
    /// <returns>A handle to the torrent or <see cref="IntPtr.Zero"/> if there an error occurred</returns>
    [LibraryImport(LibraryName, EntryPoint = "create_torrent_file", StringMarshalling = StringMarshalling.Utf8)]
    public static partial IntPtr CreateTorrentFromFile([MarshalAs(UnmanagedType.LPUTF8Str)] string path);

    /// <summary>
    /// Create a torrent file from a byte array
    /// </summary>
    /// <param name="content">The memory region containing the torrent file</param>
    /// <param name="length">The size of the region</param>
    /// <returns>A handle to the torrent or <see cref="IntPtr.Zero"/> if there an error occurred</returns>
    [LibraryImport(LibraryName, EntryPoint = "create_torrent_bytes")]
    public static partial IntPtr CreateTorrentFromBytes(byte[] content, long length);

    /// <summary>
    /// Create a torrent file from a byte array
    /// </summary>
    /// <param name="content">A byte pointer that locates the first byte of the torrent file</param>
    /// <param name="length">The size of the region</param>
    /// <returns>A handle to the torrent or <see cref="IntPtr.Zero"/> if there an error occurred</returns>
    [LibraryImport(LibraryName, EntryPoint = "create_torrent_bytes")]
    public static partial IntPtr CreateTorrentFromBytes(IntPtr content, long length);

    /// <summary>
    /// Releases the unmanaged resources associated with a torrent.
    /// </summary>
    /// <param name="torrentHandle">
    /// A handle to the torrent.
    /// This can be obtained from either <see cref="CreateTorrentFromFile"/> or <see cref="CreateTorrentFromBytes"/>
    /// </param>
    [LibraryImport(LibraryName, EntryPoint = "destroy_torrent")]
    public static partial void FreeTorrent(IntPtr torrentHandle);

    /// <summary>
    /// Attach a torrent to a session, allowing it to be downloaded
    /// </summary>
    /// <param name="sessionHandle">The session handle to attach the torrent to</param>
    /// <param name="torrentHandle">The handle of the torrent to attach</param>
    /// <param name="savePath">The path to save the contents of the torrent to</param>
    /// <returns>A torrent-session handle</returns>
    [LibraryImport(LibraryName, EntryPoint = "attach_torrent", StringMarshalling = StringMarshalling.Utf8)]
    public static partial IntPtr AttachTorrent(IntPtr sessionHandle, IntPtr torrentHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string savePath);

    /// <summary>
    /// Detaches a torrent from a session, stopping the download.
    /// </summary>
    /// <param name="sessionHandle">The session handle to detach from</param>
    /// <param name="torrentSessionHandle">The torrent-session handle to detach</param>
    /// <param name="removeFlags">libtorrent remove_flags_t bits (0 = none, 1 = delete_files, 2 = delete_partfile).</param>
    /// <remarks>
    /// After this method has returned, the <see cref="sessionHandle"/> has been released and is no longer valid for use.
    /// </remarks>
    [LibraryImport(LibraryName, EntryPoint = "detach_torrent")]
    public static partial void DetachTorrent(IntPtr sessionHandle, IntPtr torrentSessionHandle, int removeFlags);

    /// <summary>
    /// Parses a magnet URI and adds the resulting torrent to the session.
    /// Metadata arrives asynchronously via alerts.
    /// </summary>
    /// <param name="sessionHandle">The session handle to attach the torrent to</param>
    /// <param name="magnetUri">A BEP-9 magnet URI</param>
    /// <param name="savePath">The path to save the contents of the torrent to</param>
    /// <returns>A torrent-session handle, or <see cref="IntPtr.Zero"/> on parse failure</returns>
    [LibraryImport(LibraryName, EntryPoint = "lts_add_magnet", StringMarshalling = StringMarshalling.Utf8)]
    public static partial IntPtr AddMagnet(IntPtr sessionHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string magnetUri, [MarshalAs(UnmanagedType.LPUTF8Str)] string savePath);

    /// <summary>
    /// Requests the torrent's resume data. Completes asynchronously — the resume blob
    /// surfaces via <see cref="Alerts.ResumeDataReadyAlert"/> on the event callback.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_request_resume_data")]
    public static partial void RequestResumeData(IntPtr torrentSessionHandle);

    /// <summary>
    /// Discards the torrent's piece-state and re-hashes the on-disk files from scratch.
    /// Progress surfaces asynchronously via the normal status alerts.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_force_recheck")]
    public static partial void ForceRecheck(IntPtr torrentSessionHandle);

    /// <summary>
    /// Sends a scrape request to the torrent's trackers. Completes asynchronously;
    /// success surfaces as <see cref="Alerts.ScrapeReplyAlert"/>, failure as
    /// <see cref="Alerts.ScrapeFailedAlert"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_scrape_tracker")]
    public static partial void ScrapeTracker(IntPtr torrentSessionHandle);

    /// <summary>
    /// Queue-aware pause: sets the paused flag and enables auto-management so
    /// libtorrent can resume the torrent when queue slots free up.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_pause_torrent")]
    public static partial void PauseTorrent(IntPtr torrentSessionHandle);

    /// <summary>
    /// Queue-aware resume: clears the paused flag and enables auto-management
    /// so libtorrent's queue governs running/pausing.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_resume_torrent")]
    public static partial void ResumeTorrent(IntPtr torrentSessionHandle);

    /// <summary>
    /// Force-starts or un-force-starts a torrent. When <paramref name="forceStart"/>
    /// is true, clears auto-management and resumes so the queue cannot re-pause the
    /// torrent. When false, re-enables auto-management so the queue resumes governance.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_force_start_torrent")]
    public static partial void ForceStartTorrent(IntPtr torrentSessionHandle, [MarshalAs(UnmanagedType.Bool)] bool forceStart);

    /// <summary>
    /// Relocates the torrent's data to <paramref name="newPath"/>. Completes
    /// asynchronously; outcome surfaces via storage_moved[_failed]_alert.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_move_storage", StringMarshalling = StringMarshalling.Utf8)]
    public static partial void MoveStorage(IntPtr torrentSessionHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string newPath, int flags);

    /// <summary>
    /// Populates <paramref name="peers"/> with a snapshot of the torrent's connected peers.
    /// The buffer is native-owned; release via <see cref="FreePeerList"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_get_peers")]
    public static partial void GetPeers(IntPtr torrentSessionHandle, out NativeStructs.PeerList peers);

    /// <summary>
    /// Releases the native array populated by <see cref="GetPeers"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_destroy_peers")]
    public static partial void FreePeerList(ref NativeStructs.PeerList peers);

    /// <summary>
    /// Populates <paramref name="trackers"/> with a snapshot of the torrent's trackers.
    /// Buffer is native-owned; release via <see cref="FreeTrackerList"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_get_trackers")]
    public static partial void GetTrackers(IntPtr torrentSessionHandle, out NativeStructs.TrackerList trackers);

    [LibraryImport(LibraryName, EntryPoint = "lts_destroy_trackers")]
    public static partial void FreeTrackerList(ref NativeStructs.TrackerList trackers);

    [LibraryImport(LibraryName, EntryPoint = "lts_add_tracker", StringMarshalling = StringMarshalling.Utf8)]
    public static partial void AddTracker(IntPtr torrentHandle, string url, int tier);

    [LibraryImport(LibraryName, EntryPoint = "lts_remove_tracker", StringMarshalling = StringMarshalling.Utf8)]
    public static partial void RemoveTracker(IntPtr torrentHandle, string url);

    [LibraryImport(LibraryName, EntryPoint = "lts_edit_tracker", StringMarshalling = StringMarshalling.Utf8)]
    public static partial void EditTracker(IntPtr torrentHandle, string oldUrl, string newUrl, int newTier);
